@@ -27,3 +27,4 @@ depth: 1
  * Use the correct type scale for heading levels in rich text (Steven Steinwand)
  * Update alignment and reveal logic of fields’ comment buttons (Steven Steinwand)
  * Regression from Markdown conversion in documentation for API configuration - update to correctly use PEP-8 for example code (Storm Heg)
+ * Prevent 'Delete' link on page edit view from redirecting back to the deleted page (LB (Ben) Johnston)
